# domain_watcher

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: main.rs
