[package]
name = "domain_watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
colored = "2.1.0"
lettre = { version = "0.11.7", features = ["smtp-transport"] }
log = "0.4.22"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.39.2", features = ["full"] }
toml = "0.8.16"
